feat: improve CLI model selector and fix Vietnamese input issues
- Implement scrolling in ModelSelector\n- Add proxy_config.json for dynamic model configuration\n- Fix Vietnamese typing/IME issues in PasteAwareTextInput\n- Add lettalo global command for local dev

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Letta Code is a CLI tool for interacting with stateful Letta agents from the terminal.",
   "type": "module",
   "bin": {
-    "letta": "letta.js"
+    "letta": "letta.js",
+    "lettalo": "lettalo"
   },
   "files": [
     "LICENSE",
